--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.2.0",
     "sweetalert2": "^11.9.0",
     "web-vitals": "^2.1.4"
   },
